--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>B.E / CSE</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>gmail:</strong> <span>karthick.mindtek@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Currently Unavailable</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Currently Available</span></li>
                 </ul>
               </div>
             </div>
