--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>KARTHICK | Portfolio</title>
+  <title>K A R T H I C K | Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -264,70 +264,112 @@
       </div>
     </section><!-- End Services Section -->
 
-<!-- ======= Projects Section ======= -->
-<section id="projects" class="projects">
-  <div class="container">
-    <div class="section-title">
-      <h2>Projects</h2>
-      <p>Take a look at some of my recent projects.</p>
-    </div>
-
-    <div class="row">
-      <!-- Project 1 -->
-      <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-        <div class="card" data-aos="fade-up">
-          <div class="card-inner">
-            <div class="card-front">
-              <img src="assets/img/newfbro.png" class="card-img-top" alt="Project 1">
-
+    <section id="projects" class="projects">
+      <div class="container">
+        <div class="section-title">
+          <h2>Projects</h2>
+          <p>Take a look at some of my recent projects.</p>
+        </div>
+    
+        <div class="row">
+          <!-- Project 1: Hotel Room Booking -->
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="card" data-aos="fade-up">
+              <div class="card-inner">
+                <div class="card-front">
+                  <img src="assets/img/newfbro.png" class="card-img-top" alt="Hotel Room Booking">
+                </div>
+                <div class="card-back">
+                  <div class="card-body">
+                    <h5 class="card-title">Hotel Room Booking</h5>
+                    <p class="card-text "><strong>Description:</strong> A comprehensive application to streamline the process of reserving hotel accommodations.</p>
+                    <p class="card-text"><strong>My Role:</strong> As a full-stack developer, I contributed to building features like real-time room availability, reservation tracking, and seamless payment integration, ensuring a smooth booking experience for users.</p>
+                    <p class="card-text"><strong>Technologies Used:</strong> React, JavaScript, Bootstrap, Express, MySQL.</p>
+                    <a href="https://fabro-rooms.netlify.app/" class="btn btn-primary" target="_blank">View Project</a>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="card-back">
-              <div class="card-body">
-                <h5 class="card-title">Hotel Room Booking</h5>
-                <p class="card-text">I developed the Hotel Room Booking System as a comprehensive application to streamline the process of reserving hotel accommodations. I tailored this system to enhance the customer experience by offering a user-friendly interface and efficient management tools for hotel administrators.</p>
-                <a href="https://fabro-rooms.netlify.app/" class="btn btn-primary" target="_blank">View Project</a>
+          </div>
+          <!-- Project 2: Medical Billing -->
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="card" data-aos="fade-up" data-aos-delay="100">
+              <div class="card-inner">
+                <div class="card-front">
+                  <img src="assets/img/medical.jpg" class="card-img-top" alt="Medical Billing">
+                </div>
+                <div class="card-back">
+                  <div class="card-body">
+                    <h5 class="card-title">Medical Billing</h5>
+                    <p class="card-text"><strong>Description:</strong> Enhanced the system with notification features for customer appointments.</p>
+                    <p class="card-text"><strong>My Role:</strong> I was responsible for implementing a notification system that alerted patients about upcoming appointments, ensuring better adherence to scheduled visits and reducing no-shows.</p>
+                    <p class="card-text"><strong>Technologies Used:</strong> PHP, MySQL, HTML, CSS, JavaScript.</p>
+                    <a href="#" class="btn btn-primary">View Project</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Project 3: College Gallery -->
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="card" data-aos="fade-up" data-aos-delay="200">
+              <div class="card-inner">
+                <div class="card-front">
+                  <img src="assets/img/college.jpg" class="card-img-top" alt="College Project">
+                </div>
+                <div class="card-back">
+                  <div class="card-body">
+                    <h5 class="card-title">College Gallery</h5>
+                    <p class="card-text"><strong>Description:</strong> Developed a manageable gallery section for the college website.</p>
+                    <p class="card-text"><strong>My Role:</strong>  I integrated the gallery feature, enabling administrators to upload, edit, and organize images and videos seamlessly. The intuitive interface facilitated easy content management and enriched user experience.</p>
+                    <p class="card-text"><strong>Technologies Used:</strong> PHP, MySQL, HTML, CSS, JavaScript.</p>
+                    <a href="#" class="btn btn-primary">View Project</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Project 4: Research Enquiry -->
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="card" data-aos="fade-up" data-aos-delay="300">
+              <div class="card-inner">
+                <div class="card-front">
+                  <img src="assets/img/bda2.jpg" class="card-img-top" alt="Research Enquiry">
+                </div>
+                <div class="card-back">
+                  <div class="card-body">
+                    <h5 class="card-title">Research Enquiry</h5>
+                    <p class="card-text"><strong>Description:</strong> Managed backend and developed full admin panel for research enquiries.</p>
+                    <p class="card-text"><strong>My Role:</strong> I'm responsible for the development of backend services, including subscription management, contact form processing, and data retrieval for admin dashboard presentation.</p>
+                    <p class="card-text"><strong>Technologies Used:</strong> PHP, HTML, CSS, JavaScript, Bootstrap.</p>
+                    <a href="#" class="btn btn-primary">View Project</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Project 5: Taxi Booking Backend -->
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="card" data-aos="fade-up" data-aos-delay="400">
+              <div class="card-inner">
+                <div class="card-front">
+                  <img src="assets/img/taxi2.png" class="card-img-top" alt="Taxi Booking">
+                </div>
+                <div class="card-back">
+                  <div class="card-body">
+                    <h5 class="card-title">Taxi Booking Backend</h5>
+                    <p class="card-text"><strong>Description:</strong> Developed backend service for a taxi booking application.</p>
+                    <p class="card-text"><strong>My Role:</strong> I architected the backend infrastructure, designing APIs for booking requests, driver assignments, and fare calculations. The scalable backend supported real-time updates and ensured a reliable booking experience.</p>
+                    <p class="card-text"><strong>Technologies Used:</strong> Express.js.</p>
+                    <a href="#" class="btn btn-primary">View Project</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <!-- Project 2 -->
-      <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-        <div class="card" data-aos="fade-up" data-aos-delay="100">
-          <div class="card-inner">
-            <div class="card-front">
-              <img src="assets/img/project-2.jpg" class="card-img-top" alt="Project 2">
-            </div>
-            <div class="card-back">
-              <div class="card-body">
-                <h5 class="card-title">Project 2</h5>
-                <p class="card-text">Description of Project 2. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
-                <a href="#" class="btn btn-primary">View Project</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Project 3 -->
-      <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-        <div class="card" data-aos="fade-up" data-aos-delay="200">
-          <div class="card-inner">
-            <div class="card-front">
-              <img src="assets/img/project-3.jpg" class="card-img-top" alt="Project 3">
-            </div>
-            <div class="card-back">
-              <div class="card-body">
-                <h5 class="card-title">Project 3</h5>
-                <p class="card-text">Description of Project 3. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
-                <a href="#" class="btn btn-primary">View Project</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section><!-- End Projects Section -->
+    </section><!-- End Projects Section -->
 
   <!-- ======= Testimonials Section ======= -->
   <section id="testimonials" class="testimonials section-bg">
