--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             <div class="card" data-aos="fade-up" data-aos-delay="400">
               <div class="card-inner">
                 <div class="card-front">
-                  <img src="assets/img/taxi2.png" class="card-img-top" alt="Taxi Booking">
+                  <img src="assets/img/taxi.jpg" class="card-img-top" alt="Taxi Booking">
                 </div>
                 <div class="card-back">
                   <div class="card-body">
