--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
         <div class="section-title">
           <h2>About Me</h2>
           <p>
-            As a programmer and web developer, I am a highly motivated and skilled web developer with a strong foundation in HTML, CSS, JavaScript, PHP, React.js, Express.js, and MySQL. I am passionate about creating engaging and dynamic web applications and have a solid understanding of programming fundamentals in Python and Java. My problem-solving skills are exceptional, and I am always looking for new challenges to enhance my skills further. Please feel free to contact me for any programming or web development needs.</p>
+           
+I am a highly motivated and skilled web developer with a strong foundation in HTML, CSS, JavaScript, PHP, React.js, Express.js, and MySQL. Passionate about creating engaging and dynamic web applications, I also have a solid understanding of programming fundamentals in Python and Java. In addition, I possess expertise in UI/UX design and logo editing. My problem-solving skills are exceptional, and I am always seeking new challenges to further enhance my abilities. Please feel free to contact me for any programming or web development needs.</p>
         </div>
 
         <div class="row">
