--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ I am a highly motivated and skilled web developer with a strong foundation in HT
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>15 Oct 2001</span></li>
-                  <a href="http://www.karthickthecoder.unaux.com" target="_blank"><li class="text-dark"><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>karthickthecoder.unaux.com</span></li></a>
+                  <a href="http://www.karthickthecoder.unaux.com" target="_blank"><li class="text-dark"><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.karthickthecoder.unaux.com</span></li></a>
                  <a href="tel:+918778315180"> <li class="text-dark"><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>8778315180</span></li></a>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Nagercoil, India</span></li>
                 </ul>
