--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
   <!-- ======= Mobile nav toggle button ======= -->
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
+  <img src="assets/img/karthick2.png" class="mobile-nav-logo d-xl-none" alt="">
+
 
   <!-- ======= Header ======= -->
   <header id="header">
