--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
           <li><a href="#projects" class="nav-link scrollto"><i class="bx bx-code"></i> <span>Projects</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
           <li><a href="#view" class="nav-link scrollto"> <!-- Start of CuterCounter Code -->
-            <a href="https://www.cutercounter.com/" target="_blank"><img src="https://www.cutercounter.com/hits.php?id=humxpocaf&nd=6&style=45"  alt="blog counter"></a>
-            <!-- End of CuterCounter Code --></a></li>
+            <!-- Start of CuterCounter Code -->
+<a href="https://www.cutercounter.com/" target="_blank"><img src="https://www.cutercounter.com/hits.php?id=hxpocnd&nd=6&style=52" border="0" alt="counter for blog"></a>
+<!-- End of CuterCounter Code --></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -558,9 +559,9 @@
         &copy; Copyright <strong><span>KARTHICK</span></strong>
       </div>
       <div class="copyright">
-        <!-- Start of CuterCounter Code -->
-        <a href="https://www.cutercounter.com/" target="_blank"><img
-            src="https://www.cutercounter.com/hits.php?id=hxpocaa&nd=6&style=39" border="0" alt="counter for blog"></a>
+        <!-- Start of CuterCounter Code --><!-- Start of CuterCounter Code -->
+<a href="https://www.cutercounter.com/" target="_blank"><img src="https://www.cutercounter.com/hits.php?id=hxpocfc&nd=6&style=38" border="0" alt="blog counter"></a>
+<!-- End of CuterCounter Code -->
         <!-- End of CuterCounter Code -->
       </div>
 
